# sed-fitters

./: CMakeLists.txt  README.md
bpz/: CMakeLists.txt  bpz.cpp  bpz.hpp
colour-grid/: CMakeLists.txt  colour_grid.cpp  colour_grid.hpp
colour_cube/: CMakeLists.txt  colour_cube.hpp  make_colour_cube.cpp
eazy/: CMakeLists.txt  eazy.cpp  eazy.hpp
include/: catalog_fitter.hpp  common.hpp  fitter_base.hpp  metrics.hpp  psf_moments.hpp  rebin.hpp  tree.hpp
share/filters/filter-db/: fast.map
share/filters/psf-filters/: 2mass-J.fits  euclid-vis-psf-mono-coated3-0-0-ftot.fits  euclid-vis-psf-mono-coated3-0-0-lam.fits  euclid-vis-psf-mono-coated3-0-0-q11.fits  euclid-vis-psf-mono-coated3-0-0-q12.fits  euclid-vis-psf-mono-coated3-0-0-q22.fits  euclid-vis-psf-mono-coated3-3-9-ftot.fits  euclid-vis-psf-mono-coated3-3-9-lam.fits  euclid-vis-psf-mono-coated3-3-9-q11.fits  euclid-vis-psf-mono-coated3-3-9-q12.fits  euclid-vis-psf-mono-coated3-3-9-q22.fits  euclid-vis-psf-mono-coated3-5-5-ftot.fits  euclid-vis-psf-mono-coated3-5-5-lam.fits  euclid-vis-psf-mono-coated3-5-5-q11.fits  euclid-vis-psf-mono-coated3-5-5-q12.fits  euclid-vis-psf-mono-coated3-5-5-q22.fits  euclid-vis-psf-mono-coated3-9-3-ftot.fits  euclid-vis-psf-mono-coated3-9-3-lam.fits  euclid-vis-psf-mono-coated3-9-3-q11.fits  euclid-vis-psf-mono-coated3-9-3-q12.fits  euclid-vis-psf-mono-coated3-9-3-q22.fits  euclid-vis-psf-mono-coated3-9-9-ftot.fits  euclid-vis-psf-mono-coated3-9-9-lam.fits  euclid-vis-psf-mono-coated3-9-9-q11.fits  euclid-vis-psf-mono-coated3-9-9-q12.fits  euclid-vis-psf-mono-coated3-9-9-q22.fits  euclid-vis-psf-mono-f2-ftot.fits  euclid-vis-psf-mono-f2-lam.fits  euclid-vis-psf-mono-f2-q11.fits  euclid-vis-psf-mono-f2-q12.fits  euclid-vis-psf-mono-f2-q22.fits  euclid-vis-psf-mono-f4-ftot.fits  euclid-vis-psf-mono-f4-lam.fits  euclid-vis-psf-mono-f4-q11.fits  euclid-vis-psf-mono-f4-q12.fits  euclid-vis-psf-mono-f4-q22.fits  euclid-vis-psf-mono-f6-ftot.fits  euclid-vis-psf-mono-f6-lam.fits  euclid-vis-psf-mono-f6-q11.fits  euclid-vis-psf-mono-f6-q12.fits  (+107 more)
share/misc/: psf-mono-coated3-0-0.fits  psf-mono-coated3-3-9.fits  psf-mono-coated3-5-5.fits  psf-mono-coated3-9-3.fits  psf-mono-coated3-9-9.fits  psf-mono-f2.fits  psf-mono-f4.fits  psf-mono-f6.fits  psf-mono-f7.fits  psf-mono-f9.fits  psf-mono.fits
share/seds/EGG++-lines/: egg-06-10.sed  egg-07-10.sed  egg-07-11.sed  egg-07-12.sed  egg-07-13.sed  egg-08-10.sed  egg-08-11.sed  egg-08-12.sed  egg-08-13.sed  (+281 more)
(+295 files in other folders)
